Generate combination graphs with sequential composition, parallelisation and choice